# protodefs

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  README.md  WORKSPACE
.github/: pull_request_template.md
examples/planning/cpp/: BUILD  WORKSPACE  client.cc  client.h  main.cc
examples/planning/data/: key_configs.yaml  key_edges.yaml  manifest.yaml
examples/planning/data/constraints/: default.yaml
examples/planning/data/dmd/: iiwa_boxes.dmd.yaml  iiwa_only.dmd.yaml
examples/planning/data/urdf/: boxes.urdf  iiwa.urdf  package.xml
examples/planning/go/: setup.sh
examples/planning/python/: README.md  generate_id_client.py  iris_client.py  planner_client.py  requirements.txt  setup.sh  simple_client.py  visualizer.py
proto/planning/: api.proto  basic_types.proto  builder.proto  compute_hash.proto  example.py  generate_id.proto  planner.proto  sum.proto  types.proto  visualizer.proto
protos/planning/: api.proto
